fix: layout issues

--- a/src/components/LoginFormContainer/index.css
+++ b/src/components/LoginFormContainer/index.css
@@ -1,12 +1,12 @@
 .login-form-container {
   width: 50%;
-  height: 100%;
+  flex: 1;
 
   padding: 2rem;
 
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
 }
 
