--- a/src/components/LoginMediaContainer/index.css
+++ b/src/components/LoginMediaContainer/index.css
@@ -1,6 +1,10 @@
 .login-media-container {
   width: 50%;
-  height: 100%;
-  /* flex-grow: 1; */
+  flex: 1;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   background-color: var(--color-offwhite);
 }
