--- a/src/components/PageContentContainer/index.css
+++ b/src/components/PageContentContainer/index.css
@@ -1,11 +1,10 @@
 .page-content-container {
   width: 100%;
-  height: 200vh;
+  min-height: calc(100vh - 6rem);
 
   padding: 2rem;
   margin-top: 6rem;
 
   display: flex;
-  justify-content: center;
-  align-items: flex-start;
+  /* flex-direction: column; */
 }
