--- a/src/index.css
+++ b/src/index.css
@@ -31,11 +31,23 @@ html {
 }
 
 body {
-  width: 100vw;
-  min-height: 100vh;
   overflow-x: hidden;
   overflow-y: auto;
 
   background-color: var(--color-offblack);
   color: var(--color-offwhite);
+}
+
+/* @info App */
+
+.App {
+  position: relative;
+  width: 100vw;
+  height: 100%;
+  min-height: 100vh;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-content: center;
 }
